--- a/index.html
+++ b/index.html
@@ -1,3 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Shorts Combiner</title>
+<style>
+body { font-family: Arial, sans-serif; max-width: 900px; margin: 20px auto; padding: 12px; background: #f3f3f3; }
+h1 { font-size: 22px; margin-bottom: 15px; }
+input, button { padding: 10px; margin: 5px 0; }
+button { background: #1976d2; color: white; border: none; border-radius: 5px; cursor: pointer; }
+button:hover { background: #115293; }
+#log { margin-top: 12px; background: #000; color: #0f0; padding: 10px; border-radius: 5px; font-family: monospace; max-height: 200px; overflow-y: auto; }
+#result { margin-top: 12px; }
+</style>
+</head>
+<body>
+<h1>Shorts Combiner</h1>
+<input type="file" id="fileInput" multiple accept="video/*"><br>
+<button id="combineBtn">Combine Videos</button>
+<div id="log"></div>
+<div id="result"></div>
+
+<script>
 const fileInput = document.getElementById("fileInput");
 const combineBtn = document.getElementById("combineBtn");
 const log = document.getElementById("log");
@@ -5,18 +29,13 @@ const result = document.getElementById("result");
 
 combineBtn.onclick = async () => {
   const files = fileInput.files;
-  if (!files.length) {
-    alert("Please select at least one video to combine!");
-    return;
-  }
+  if (!files.length) { alert("Please select at least one video to combine!"); return; }
 
   log.innerText = "⏳ Uploading and combining videos...";
   result.innerHTML = "";
 
   const formData = new FormData();
-  for (let file of files) {
-    formData.append("videos", file);
-  }
+  for (let file of files) formData.append("videos", file);
 
   try {
     const res = await fetch("/combine", { method: "POST", body: formData });
@@ -38,4 +57,7 @@ combineBtn.onclick = async () => {
     log.innerText = "❌ Error combining videos: " + err.message;
   }
 };
+</script>
+</body>
+</html>
 
