--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@ const combineBtn = document.getElementById("combineBtn");
 const log = document.getElementById("log");
 const result = document.getElementById("result");
 
+// Replace this with your Render backend URL
+const BACKEND_URL = "https://shortscombiner.onrender.com";
+
 combineBtn.onclick = async () => {
   const files = fileInput.files;
   if (!files.length) { alert("Please select at least one video to combine!"); return; }
@@ -38,7 +41,7 @@ combineBtn.onclick = async () => {
   for (let file of files) formData.append("videos", file);
 
   try {
-    const res = await fetch("/combine", { method: "POST", body: formData });
+    const res = await fetch(`${BACKEND_URL}/combine`, { method: "POST", body: formData });
     if (!res.ok) throw new Error(`Server responded with ${res.status}`);
 
     const blob = await res.blob();
