--- a/index.html
+++ b/index.html
@@ -1,112 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Shorts Combiner — Merge MP4/WebM in Browser</title>
-<style>
-body { font-family: "Segoe UI", Arial; max-width: 900px; margin:20px auto; padding:15px; background:#f4f4f9; color:#111;}
-h1 { font-size:24px; text-align:center; color:#1976d2;}
-.files-list { margin:10px 0; }
-.file-item { display:flex; justify-content:space-between; padding:6px 10px; background:#fff; border-radius:6px; margin-bottom:5px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);}
-button { background:#1976d2; color:white; border:none; padding:8px 14px; border-radius:6px; cursor:pointer;}
-button:hover { background:#115293;}
-#log { height:250px; overflow:auto; background:#111a2b; color:#dff; padding:8px; border-radius:6px; font-family:monospace; font-size:12px; margin-top:10px;}
-#downloadLink { display:block; margin-top:10px; font-size:16px; color:#1976d2; text-decoration:none; font-weight:bold;}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FFmpeg.wasm Video Combiner (Local)</title>
+  <style>
+    body { font-family: Arial; background: #0f1724; color: #fff; text-align:center; padding:20px; }
+    input, button { margin:10px; padding:8px; font-size:16px; }
+    button { cursor:pointer; border-radius:5px; border:none; background:#1976d2; color:#fff; }
+    button:hover { background:#135cb0; }
+    #progress { width:300px; height:20px; background:#1e293b; margin:10px auto; border-radius:10px; overflow:hidden; }
+    #progress-bar { width:0%; height:100%; background:#22c55e; transition:0.3s; }
+    video { margin-top:20px; max-width:90%; border-radius:10px; }
+  </style>
 </head>
 <body>
-<h1>Shorts Combiner — Merge MP4/WebM in Browser</h1>
-<p>Upload multiple 9:16 shorts. The browser will merge them into a single MP4.</p>
+  <h1>FFmpeg.wasm Video Combiner (Local)</h1>
+  <input type="file" id="file1" accept="video/*">
+  <input type="file" id="file2" accept="video/*">
+  <br>
+  <button id="combineBtn">Combine Videos</button>
 
-<input type="file" id="fileInput" multiple accept="video/*">
-<div class="files-list" id="filesList"></div>
+  <div id="progress"><div id="progress-bar"></div></div>
 
-<button id="combineBtn">Combine into Single MP4</button>
-<a id="downloadLink"></a>
+  <video id="outputVideo" controls></video>
 
-<div id="log">Logs will appear here...</div>
+  <script type="module">
+    import { createFFmpeg, fetchFile } from './ffmpeg-core/ffmpeg-core.js';
 
-<script type="module">
-import { createFFmpeg, fetchFile } from 'https://cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@0.9.8/dist/ffmpeg.min.js';
+    const ffmpeg = createFFmpeg({ log: true, corePath: './ffmpeg-core/ffmpeg-core.wasm' });
+    const file1Input = document.getElementById('file1');
+    const file2Input = document.getElementById('file2');
+    const combineBtn = document.getElementById('combineBtn');
+    const progressBar = document.getElementById('progress-bar');
+    const outputVideo = document.getElementById('outputVideo');
 
-const ffmpeg = createFFmpeg({
-  log: true,
-  corePath: './ffmpeg-core/ffmpeg-core.js' // local path in your repo
-});
+    async function combineVideos() {
+      if (!file1Input.files[0] || !file2Input.files[0]) {
+        alert('Select two videos first.');
+        return;
+      }
 
-const fileInput = document.getElementById('fileInput');
-const filesList = document.getElementById('filesList');
-const combineBtn = document.getElementById('combineBtn');
-const logEl = document.getElementById('log');
-const downloadLink = document.getElementById('downloadLink');
+      combineBtn.disabled = true;
+      progressBar.style.width = '0%';
 
-let files = [];
+      if (!ffmpeg.isLoaded()) await ffmpeg.load();
 
-function log(msg){ logEl.textContent += msg + "\n"; logEl.scrollTop = logEl.scrollHeight; }
+      ffmpeg.FS('writeFile', 'input1.mp4', await fetchFile(file1Input.files[0]));
+      ffmpeg.FS('writeFile', 'input2.mp4', await fetchFile(file2Input.files[0]));
+      ffmpeg.FS('writeFile', 'filelist.txt', "file 'input1.mp4'\nfile 'input2.mp4'");
 
-fileInput.addEventListener('change', e=>{
-  files = Array.from(e.target.files);
-  filesList.innerHTML = '';
-  files.forEach((f,i)=>{
-    const div = document.createElement('div');
-    div.className = 'file-item';
-    div.textContent = `#${i+1} ${f.name} (${(f.size/1024/1024).toFixed(1)} MB)`;
-    filesList.appendChild(div);
-  });
-});
+      ffmpeg.setProgress(({ ratio }) => {
+        progressBar.style.width = `${Math.round(ratio * 100)}%`;
+      });
 
-combineBtn.onclick = async () => {
-  if(!files.length){ alert("Select some videos first!"); return; }
-
-  log("Loading FFmpeg...");
-  if(!ffmpeg.isLoaded()) await ffmpeg.load();
-  log("FFmpeg loaded.");
-
-  try {
-    const tsFiles = [];
-    for(let i=0;i<files.length;i++){
-      const f = files[i];
-      const name = `in${i}.mp4`;
-      log(`Writing file ${f.name} -> ${name}`);
-      ffmpeg.FS('writeFile', name, await fetchFile(f));
-
-      const tsName = `seg${i}.ts`;
-      log(`Re-encoding ${name} -> ${tsName}`);
-      await ffmpeg.run('-i', name, '-c:v', 'libx264', '-c:a', 'aac', '-preset', 'veryfast', '-crf', '23',
-        '-vf', 'scale=1080:1920:force_original_aspect_ratio=decrease,pad=1080:1920:(ow-iw)/2:(oh-ih)/2',
-        '-f', 'mpegts', tsName);
-      tsFiles.push(tsName);
-
-      ffmpeg.FS('unlink', name);
-      log(`Done ${i+1}/${files.length}`);
+      try {
+        await ffmpeg.run('-f', 'concat', '-safe', '0', '-i', 'filelist.txt', '-c', 'copy', 'output.mp4');
+        const data = ffmpeg.FS('readFile', 'output.mp4');
+        outputVideo.src = URL.createObjectURL(new Blob([data.buffer], { type: 'video/mp4' }));
+      } catch (err) {
+        alert('Error: ' + err.message);
+      } finally {
+        combineBtn.disabled = false;
+      }
     }
 
-    log("Creating concat list...");
-    const listTxt = tsFiles.map(n=>`file '${n}'`).join('\n');
-    ffmpeg.FS('writeFile', 'list.txt', listTxt);
-
-    log("Concatenating segments...");
-    await ffmpeg.run('-f','concat','-safe','0','-i','list.txt','-c','copy','output.mp4');
-
-    const data = ffmpeg.FS('readFile','output.mp4');
-    const blob = new Blob([data.buffer], { type:'video/mp4' });
-    const url = URL.createObjectURL(blob);
-
-    downloadLink.href = url;
-    downloadLink.download = 'combined_video.mp4';
-    downloadLink.textContent = '⬇️ Download Combined MP4';
-    log("✅ Done! Click download link.");
-
-    tsFiles.forEach(n => ffmpeg.FS('unlink', n));
-    ffmpeg.FS('unlink','list.txt');
-    ffmpeg.FS('unlink','output.mp4');
-
-  } catch(err) {
-    log("❌ Error: " + err.message);
-    console.error(err);
-  }
-};
-</script>
+    combineBtn.addEventListener('click', combineVideos);
+  </script>
 </body>
 </html>
