--- a/index.html
+++ b/index.html
@@ -13,43 +13,13 @@
       flex-direction: column;
       align-items: center;
       padding: 2rem;
-      min-height: 100vh;
     }
-    h1 {
-      margin-bottom: 1rem;
-      color: #1976d2;
-      text-align: center;
-    }
-    input, button {
-      margin: 0.5rem 0;
-      padding: 0.5rem;
-      font-size: 1rem;
-      border-radius: 5px;
-      border: none;
-    }
-    button {
-      background: #1976d2;
-      color: #fff;
-      cursor: pointer;
-    }
-    button:disabled {
-      background: #555;
-      cursor: not-allowed;
-    }
-    #progress {
-      width: 100%;
-      max-width: 400px;
-      margin-top: 1rem;
-    }
-    #downloadLink {
-      display: none;
-      margin-top: 1rem;
-      color: #0f1724;
-      background: #1976d2;
-      padding: 0.5rem 1rem;
-      border-radius: 5px;
-      text-decoration: none;
-    }
+    h1 { margin-bottom: 1rem; color: #1976d2; }
+    input, button { margin: 0.5rem 0; padding: 0.5rem; font-size: 1rem; }
+    button { background: #1976d2; color: #fff; border: none; cursor: pointer; }
+    button:disabled { background: #555; cursor: not-allowed; }
+    #progress { width: 100%; margin-top: 1rem; }
+    a { color: #0d47a1; text-decoration: underline; }
   </style>
 </head>
 <body>
@@ -58,12 +28,17 @@
   <input type="file" id="files" multiple accept="video/*">
   <button id="combineBtn" disabled>Combine Videos</button>
   <progress id="progress" value="0" max="100"></progress>
-  <a id="downloadLink">Download Combined Video</a>
+  <a id="downloadLink" style="display:none; margin-top:1rem;"></a>
 
   <script type="module">
-    import { createFFmpeg, fetchFile } from 'https://unpkg.com/@ffmpeg/ffmpeg@0.11.0/dist/ffmpeg.min.js';
+    import { createFFmpeg, fetchFile } from './ffmpeg.min.js';
 
-    const ffmpeg = createFFmpeg({ log: true });
+    // Point to your local wasm file
+    const ffmpeg = createFFmpeg({
+      log: true,
+      corePath: './ffmpeg-core.wasm'
+    });
+
     const filesInput = document.getElementById('files');
     const combineBtn = document.getElementById('combineBtn');
     const progressEl = document.getElementById('progress');
@@ -78,9 +53,7 @@
       progressEl.value = 0;
       downloadLink.style.display = 'none';
 
-      if (!ffmpeg.isLoaded()) {
-        await ffmpeg.load();
-      }
+      await ffmpeg.load();
 
       const fileList = Array.from(filesInput.files).slice(0, 100);
       const txtList = [];
@@ -101,8 +74,8 @@
 
       downloadLink.href = url;
       downloadLink.download = 'combined.mp4';
-      downloadLink.style.display = 'block';
       downloadLink.textContent = 'Download Combined Video';
+      downloadLink.style.display = 'block';
 
       progressEl.value = 100;
       combineBtn.disabled = false;
@@ -110,3 +83,4 @@
   </script>
 </body>
 </html>
+
