--- a/index.html
+++ b/index.html
@@ -202,13 +202,14 @@
     function startRecording() { if (!videoQueue.length) return alert('Load clips first!'); recordedChunks=[]; currentClipIndex=0; recordingInProgress=true; playNextClip(true); }
 
     // ---------------- Render Backend Integration ----------------
-    const BACKEND_URL = "https://shorts-backend.onrender.com";
+    const BACKEND_URL = "https://shortscombiner.onrender.com/";
 
     async function uploadShort(blob) {
       try {
         const formData = new FormData();
         formData.append("video", blob, `short_${Date.now()}.webm`);
-        const res = await fetch(`${BACKEND_URL}/upload`, { method: "POST", body: formData });
+        const res = await fetch('/upload', { method: "POST", body: formData });
+
         const data = await res.json();
         let shorts = JSON.parse(localStorage.getItem("shorts") || "[]");
         shorts.push(data.filename);
