--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@
       try {
         const formData = new FormData();
         formData.append("video", blob, `short_${Date.now()}.webm`);
-        const res = await fetch('/upload', { method: "POST", body: formData });
+        const res = await fetch(`${BACKEND_URL}upload`, { method: "POST", body: formData });
+
 
         const data = await res.json();
         let shorts = JSON.parse(localStorage.getItem("shorts") || "[]");
