--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       if (!shorts.length) return alert("No saved shorts yet!");
       progressStatusEl.textContent = "Merging all shorts on Render...";
       try {
-        const res = await fetch(`${BACKEND_URL}/merge`, {
+        const res = await fetch(`${BACKEND_URL}merge`, {
           method: "POST",
           headers: {"Content-Type":"application/json"},
           body: JSON.stringify({ files: shorts })
